Creado mediante Colaboratory

--- a/01. Introduction to Jupyter Notebooks and Data - Python.ipynb
+++ b/01. Introduction to Jupyter Notebooks and Data - Python.ipynb
@@ -76,21 +76,21 @@
       "metadata": {
         "trusted": true,
         "id": "rT7XKAyg6Zlp",
-        "outputId": "65b70e54-2584-4a21-df9d-91ebe0a8b39a",
+        "outputId": "2b00e400-0e65-4b64-999d-fe1df6a1c59a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "print(\"The code ran successfully!\")"
+        "print(\"Echale ganas gallo\")"
       ],
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The code ran successfully!\n"
+            "Echale ganas gallo\n"
           ],
           "name": "stdout"
         }
@@ -120,7 +120,7 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "import matplotlib.pyplot as graph"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "trusted": true,
         "id": "rmNhREOl6Zl9",
-        "outputId": "1baf9023-26be-43e6-fd98-01802b2f53e8",
+        "outputId": "46eca597-9385-460a-8af2-ecacc2e871c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -154,18 +154,18 @@
         "###\n",
         "# WRITE A MESSAGE BETWEEN THE SPEECH MARKS IN THE LINE BELOW, THEN HIT RUN.\n",
         "###\n",
-        "print(\"type something here!\")\n",
+        "print(\"Arriba el rebaño\")\n",
         "###\n",
         "\n",
         "# It's ok to use spaces, numbers, or letters. Your message should look red.\n",
         "# For example: print(\"this is my message\")"
       ],
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "type something here!\n"
+            "Arriba el rebaño\n"
           ],
           "name": "stdout"
         }
@@ -197,7 +197,7 @@
       "metadata": {
         "trusted": true,
         "id": "BME6zrr86ZmI",
-        "outputId": "b63964fa-20b0-45b1-850c-1f32072afc3d",
+        "outputId": "7da5719e-12ca-4d05-f140-b9c03a8737d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -207,17 +207,17 @@
         "###\n",
         "# WRITE A MESSAGE BETWEEN THE SPEECH MARKS IN THE LINE BELOW, THEN PRESS RUN\n",
         "###\n",
-        "my_message = \"terererer\"\n",
+        "my_message = \"ya me quiero dormir\"\n",
         "###\n",
         "\n",
         "print(my_message) "
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "terererer\n"
+            "ya me quiero dormir\n"
           ],
           "name": "stdout"
         }
@@ -274,7 +274,7 @@
       "metadata": {
         "trusted": true,
         "id": "aI-jt3uj6Zmc",
-        "outputId": "10e82e58-3eeb-4c61-843b-45768efd2538",
+        "outputId": "e5db2bc4-43c9-412b-f75b-8868932380f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -284,19 +284,19 @@
         "###\n",
         "# REPLACE <addNumber> BELOW WITH ANY NUMBER\n",
         "###\n",
-        "my_first_number = 12\n",
+        "my_first_number = 19\n",
         "###\n",
         "\n",
         "print(my_first_number)\n",
         "print(my_first_number)"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "12\n",
-            "12\n"
+            "19\n",
+            "19\n"
           ],
           "name": "stdout"
         }
@@ -382,7 +382,7 @@
         "# This makes a bar graph. We give it our x and y values\n",
         "graph.bar(x_values, y_values)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
         "print(dataset.head())\n",
         "###"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +525,7 @@
         "\n",
         "graph.scatter(x_values, y_values)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
